@@ -6,6 +6,7 @@ export DH_OPTIONS=-v
 
 # see FEATURE AREAS in dpkg-buildflags(1)
 #export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export DEB_BUILD_OPTIONS=nostrip
 
 %:
 	dh $@
