@@ -2,7 +2,7 @@
 
 [![ko-fi](https://www.ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/I3I1VA18)
 
-A quick way into a systemd "bottle" for WSL
+## A quick way into a systemd "bottle" for WSL
 
 What does that even mean?
 
@@ -20,9 +20,9 @@ If there is a package available for your distribution, this is the recommended m
 
 ### Debian
 
-Dependent packages on Debian are _daemonize_, _dbus_, _dotnet-runtime-3.1_, _policykit-1_, and _systemd_ . For the most part, these are either already installed or in the distro and able to be installed automatically. You need _debhelper_ and _dotnet-sdk-3.1_ (and optionally _pbuilder_) to build the Debian package, but not to simply build _genie_ or install locally.
+Dependent packages on Debian are _daemonize_, _dbus_, _dotnet-runtime-5.0_, _policykit-1_, _systemd_ and _systemd-container_ . For the most part, these are either already installed or in the distro and able to be installed automatically. You need _debhelper_ and _dotnet-sdk-5.0_ (and optionally _pbuilder_) to build the Debian package, but not to simply build _genie_ or install locally.
 
-The chief exception is _dotnet-runtime-3.1_ , for which you will need to follow the installation instructions here:
+The chief exception is _dotnet-runtime-5.0_ , for which you will need to follow the installation instructions here:
 
 https://dotnet.microsoft.com/download/
 
@@ -41,7 +41,7 @@ sudo apt install -y systemd-genie
 
 #### PLEASE NOTE
 
-This repository is hosted at gemfly.com, a replacement for the previous repository at packagecloud.io which ran repeatedly over quota. Hopefully, this one will work better for us. The packagecloud.io repository will continue to be supported for now, but due to the existing issues we recommend updating to the new location _as soon as possible_ .
+This repository is hosted at gemfly.com, a replacement for the previous repository at packagecloud.io which ran repeatedly over quota. Hopefully, this one will work better for us. The packagecloud.io repository has now been discontinued .
 
 ### Other Distros
 
@@ -55,7 +55,7 @@ _I am unable to support distributions which there are not prebuilt packages for.
 
 ### ...OR BUILD IT YOURSELF
 
-It is possible to build your own version of genie and install it locally. To do so, you will require _build-essential_ and _dotnet-sdk-3.1_ in addition to the other dependencies, all of which must be installed manually.
+It is possible to build your own version of genie and install it locally. To do so, you will require _build-essential_ and _dotnet-sdk-5.0_ in addition to the other dependencies, all of which must be installed manually.
 
 After cloning the repository, run
 
@@ -96,6 +96,7 @@ Options:
 Commands:
   -i, --initialize           Initialize the bottle (if necessary) only.
   -s, --shell                Initialize the bottle (if necessary), and run a shell in it.
+  -l, --login                Initialize the bottle (if necessary), and open a logon prompt in it.
   -c, --command <COMMAND>    Initialize the bottle (if necessary), and run the specified command in it.
   --shutdown, -u             Shut down systemd and exit the bottle.
 ```
@@ -105,6 +106,8 @@ So, it has three modes, all of which will set up the bottle and run systemd in i
 _genie -i_ will set up the bottle - including changing the WSL hostname by suffixing -wsl, to distinguish it from the Windows host -  run systemd, and then exit. This is intended for use if you want services running all the time in the background, or to preinitialize things so you needn't worry about startup time later on, and for this purpose is ideally run from Task Scheduler on logon.
 
 _genie -s_ runs your login shell inside the bottle; basically, Windows-side, _wsl genie -s_ is your substitute for just _wsl_ to get started, or for the shortcut you get to start a shell in the distro. It follows login semantics, and as such does not preserve the current working directory.
+
+_genie -l_ opens a login session within the bottle. This permits you to log in to the WSL distribution as any user. The login prompt will return when you log out; to terminate the session, press ^] three times within one second. It follows login semantics, and as such does not preserve the current working directory.
 
 _genie -c [command]_ runs _command_ inside the bottle, then exits. The return code is the return code of the command. It follows sudo semantics, and so does preserve the cwd.
 
@@ -120,10 +123,6 @@ Further tips on usage from other genie users can be found on the wiki for this r
 
 ## BUGS
 
-1. This breaks _pstree_ and other _/proc_-walking tools that count on everything being a child of pid 1, because entering the namespace with a shell or other process leaves that process with a ppid of 0. To the best of my knowledge, I can't set the ppid of a process, and if I'm wrong about that, please send edification and pull requests to be gratefully accepted.
+1. It is considerably clunkier than I'd like it to be, inasmuch as you have to invoke genie every time to get inside the bottle, either manually (replacing, for example, _wsl [command]_ with _wsl genie -c [command]_), or by using your own shortcut in place of the one WSL gives you for the distro, using which will put you _outside_ the bottle. Pull requests, etc.
 
-2. It is considerably clunkier than I'd like it to be, inasmuch as you have to invoke genie every time to get inside the bottle, either manually (replacing, for example, _wsl [command]_ with _wsl genie -c [command]_), or by using your own shortcut in place of the one WSL gives you for the distro, using which will put you _outside_ the bottle. Pull requests, etc.
-
-3. There is a race condition that means that if you start a genie session too quickly after initializing the bottle (very likely if you use _genie -c_ or _genie -s_ without having running _genie -i_ first, meaning that they will auto-initialize the bottle on first run), you may not get a systemd-logind login session or the functionality supplied by that, such as a systemd user instance. **Using _genie -i_ is strongly recommended to avoid this issue.** Please see https://github.com/arkane-systems/genie/issues/70 for more details.
-
-4. genie is not idempotent; i.e., it is possible that changes made by genie or by systemd inside the bottle will not be perftectly reverted when the genie bottle is shut down with _genie -u_ . As such, it is recommended that you terminate the entire wsl session with _wsl -t <distro>_ or _wsl --shutdown_ in between stopping and restarting the bottle, or errors may occur.
+2. genie is not idempotent; i.e., it is possible that changes made by genie or by systemd inside the bottle will not be perfectly reverted when the genie bottle is shut down with _genie -u_ . As such, it is recommended that you terminate the entire wsl session with _wsl -t <distro>_ or _wsl --shutdown_ in between stopping and restarting the bottle, or errors may occur.
